--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1",
-    "react-native-animatable": "^1.1.0",
+    "react-native": "^0.46.0",
+    "react-native-animatable": "latest",
     "react-native-navigation": "latest"
   },
   "devDependencies": {
